--- a/imooc/package.json
+++ b/imooc/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.2.0-beta.1",
+    "asset-require-hook": "^1.2.0",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -19,6 +21,7 @@
     "chalk": "1.1.3",
     "cookie-parser": "^1.4.4",
     "css-loader": "0.28.7",
+    "css-modules-require-hook": "^4.2.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -41,6 +44,7 @@
     "promise": "8.0.1",
     "prop-type": "0.0.1",
     "raf": "3.4.0",
+    "rc-queue-anim": "^1.6.12",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
@@ -48,6 +52,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -60,7 +66,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "NODE_ENV=test nodemon --exec babel-node  server/server.js",
+    "server_bak": "node server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -114,7 +122,15 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "eqeqeq": [
+        "off"
+      ],
+      "jsx-a11y/accessible-emoji": [
+        0
+      ]
+    }
   },
   "proxy": "http://localhost:9093",
   "devDependencies": {
